--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "streamspeccer",
+  "name": "system-info-speed-test",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node local-server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.10.0",
+    "express": "^4.17.1",
+    "pg": "^8.7.0",
     "si": "^2.0.0",
-    "speedtest-net": "^2.2.0",
-    "sqlite3": "^5.1.6"
+    "speedtest-net": "^2.1.2",
+    "sqlite3": "^5.1.6",
+    "systeminformation": "^5.9.17"
   }
 }
