Udate routing in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,8 @@
     },
     {
       "src": "/(.*)",
-      "dest": "public/$1"
+      "dest": "public/$1",
+      "continue": true
     }
   ],
   "env": {
