--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,14 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/submit",
-      "dest": "app.js"
+      "source": "/submit",
+      "destination": "app.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "public/$1",
-      "continue": true
+      "source": "/(.*)",
+      "destination": "public/$1"
     }
   ],
   "env": {
